<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:episodes="http://schemas.android.com/apk/res-auto" >
  <item
      android:id="@+id/menu_toggle_show_starred"
      android:icon="@drawable/ic_show_unstarred"
      android:title="@string/menu_star_show"
      episodes:showAsAction="ifRoom" />
  <item
      android:id="@+id/menu_refresh_show"
      android:title="@string/menu_refresh_show"
      episodes:showAsAction="never"/>
  <item
      android:id="@+id/menu_mark_show_watched"
      android:title="@string/menu_mark_show_watched"
      episodes:showAsAction="never" />
  <item
      android:id="@+id/menu_mark_show_not_watched"
      android:title="@string/menu_mark_show_not_watched"
      episodes:showAsAction="never" />
  <item
      android:id="@+id/menu_delete_show"
      android:title="@string/menu_delete_show"
      episodes:showAsAction="never" />
</menu>
