<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/app_name"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:padding="4dp" />
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/about_description"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:padding="4dp" />
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/about_website"
      android:textAppearance="?android:attr/textAppearanceSmall"
      android:autoLink="web"
      android:padding="4dp" />
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/about_license"
      android:textAppearance="?android:attr/textAppearanceSmall"
      android:padding="4dp" />
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/about_tvdb"
      android:textAppearance="?android:attr/textAppearanceSmall"
      android:padding="4dp" />
</LinearLayout>
